feat: Add selo linkedin

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="/assets/css/styles.css">
-
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
     <title>Lucas Gonçalves</title>
 </head>
 
